--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mongoose": "^8.16.2"
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.18.0"
   }
 }
